# OpenGL_Engine

./: .gitignore  README .txt  README.md  README.txt
Template/: README.md
Template/1.0 - Simple Scene/: CMakeLists.txt  GLApplication.cpp  SimpleScene_Quad.cpp  SimpleScene_Quad.h
Template/Common/: CMakeLists.txt  Camera.cpp  Camera.h  Color.h  CommonConstants.h  CubeCaptureCamera.cpp  CubeCaptureCamera.h  CubeObject.cpp  CubeObject.h  Drawer.h  Engine.cpp  Engine.h  Environment.h  FBO.cpp  FBO.h  Light.h  LightManager.cpp  LightManager.h  Mesh.cpp  Mesh.h  OBJReader.cpp  OBJReader.h  Object.cpp  Object.h  Scene.cpp  Scene.h  SceneBase.cpp  SceneBase.h  Shader.cpp  Shader.h  TestScene.cpp  TestScene.h  TextureManager.cpp  TextureManager.h  TextureObject.cpp  TextureObject.h  UBO.cpp  UBO.h  VAOManager.cpp  VAOManager.h  (+4 more)
Template/Common/GUI/: ColorSet.h  CurrentCameraInfoContent.cpp  CurrentCameraInfoContent.h  EngineInfo.cpp  EngineInfo.h  EngineInfoContent.cpp  EngineInfoContent.h  GUIContent.h  GUIManager.cpp  GUIManager.h  GUIObject.h  GUIWindow.cpp  GUIWindow.h  LightDetailContent.cpp  LightDetailContent.h  LightListContent.cpp  LightListContent.h  ObjectDetailContent.cpp  ObjectDetailContent.h  ObjectListContent.cpp  ObjectListContent.h
Template/Common/Input/: InputManager.cpp  InputManager.h  KeyCodes.h
Template/Common/ObjectComponents/: ComponentBase.h  ComponentManager.h  ComponentManager.inl
Template/Common/build_files/: Common_packages.cmake  Common_target.cmake
Template/Common/shaders/: Blinn-PhongShading.frag  CubeEnvironment.frag  CubeEnvironment.vert  DiffuseShader.frag  DiffuseShader.vert  FSQ.frag  FSQ.vert  FrenselPhong.frag  FrenselPhong.vert  FrenselReflection.frag  FrenselReflection.vert  PhongLighting.vert  PhongShading.frag  PhongShading.vert  PhongShading2.frag  PhongShading2.vert  ReflectionShader.frag  ReflectionShader.vert  RefractShader.frag  RefractionShader.frag  RefractionShader.vert
Template/Common/shaders/TestShaders/: Default.frag  Default.vert
Template/TestScene/: CMakeLists.txt
